LAB 9/compiler_error/Cerror_281473379856640.txt
./submissions/gradeFileAtServer_281473379856640.cpp:1:2: error: invalid preprocessing directive #iclude; did you mean #include?
    1 | #iclude<iostream>
      |  ^~~~~~
      |  include
./submissions/gradeFileAtServer_281473379856640.cpp: In function ‘int main()’:
./submissions/gradeFileAtServer_281473379856640.cpp:7:17: error: ‘cout’ was not declared in this scope
    7 |                 cout<<i<<" ";
      |                 ^~~~
./submissions/gradeFileAtServer_281473379856640.cpp:1:1: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
  +++ |+#include <iostream>
    1 | #iclude<iostream>
